# epsmim

lab1/: CMakeLists.txt  Grid.cpp  Grid.h  README.md  Timer.cpp  Timer.h  WaveEquationSolver.cpp  WaveEquationSolver.h  gnuplotScript.p  main.cpp  run
lab1/Exceptions/: BaseException.h
lab1/FastVersion/: CMakeLists.txt  Grid.cpp  WaveEquationSolver.cpp  WaveEquationSolver.h  gnuplotScript.p  main.cpp  run
lab1/FastVersion/Exceptions/: BaseException.h
lab1/SlowVersion/: Grid.cpp  Grid.h  WaveEquationSolver.cpp
lab2/: CMakeLists.txt  WaveEquationSolver.cpp
lab2/CompilerVectorizedVersion/: CMakeLists.txt  Grid.h  WaveEquationSolver.cpp
lab2/VectorizedVersionWithAlignment/: CMakeLists.txt  Grid.cpp  Grid.h  WaveEquationSolver.cpp  WaveEquationSolver.h  main.cpp
lab2/VectorizedVersionWithAlignment/Exceptions/: FileNotOpenedException.h
lab2/VectorizedVersionWithoutAlignment/: CMakeLists.txt  FileWriter.h  Grid.h  Timer.cpp  WaveEquationSolver.cpp  main.cpp
lab2/VectorizedVersionWithoutAlignment/Exceptions/: InvalidParameterException.h
lab3/VersionWithNStepsPerPass/: CMakeLists.txt  Grid.cpp  WaveEquationSolver.cpp  WaveEquationSolver.h  main.cpp
lab3/VersionWithNStepsPerPass/Exceptions/: InvalidParameterException.h
lab4/ParallelVersion/: CMakeLists.txt  Grid.cpp  Timer.h  WaveEquationSolver.cpp
lab4/ParallelVersion/Exceptions/: InvalidIndexException.h  MemoryNotAllocatedException.h
lab4/ParallelVersionWithSpinLocks/: Grid.cpp  WaveEquationSolver.cpp  WaveEquationSolver.h  main.cpp
